--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -1,3 +1,4 @@
+/* stylelint-disable font-family-name-quotes */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 :root {
@@ -41,6 +42,15 @@ body {
 
 .column-third {
   flex-basis: calc(100% / 3);
+}
+
+.column-modal {
+  width: 70vw;
+  height: auto;
+  text-align: center;
+  border-radius: 1rem;
+  background-color: var(--egg-white);
+  padding: 1rem;
 }
 
 .margin-none {
