--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -1,6 +1,3 @@
-/* stylelint-disable font-family-name-quotes */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
 :root {
   --darkbrown-color: #c16500;
   --light-brown: #df9830;
@@ -14,7 +11,7 @@
 
 body {
   margin: 0 auto;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
   background-color: var(--egg-white);
   height: 100vh;
 }
@@ -103,9 +100,4 @@ body {
 
 .flex-column {
   flex-direction: column;
-}
-
-.instructions-button {
-  padding: 1rem 2rem;
-  font-size: 18px;
 }
