upadated search component to conditionally disable follow button if the user has clicked it, index.js successfully adding follows to notifications but not to follow table.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -430,6 +430,10 @@ h1 {
   padding: 0.5rem;
 }
 
+.follow-button:disabled {
+  background-color: var(--light-brown);
+}
+
 .follow-column {
   margin-right: 0.5rem;
 }
