--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -452,6 +452,11 @@ h1 {
   cursor: pointer;
 }
 
-.deleted-notification {
-  visibility: none;
+.no-notifications {
+  color: lightgray;
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 0.5rem;
+  cursor: pointer;
 }
