refactored follow/following query in index.jsto allow users to follow each other

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -56,6 +56,10 @@ body {
   flex-basis: calc(100% / 3);
 }
 
+.column-two-third {
+  flex-basis: calc(100% / 6);
+}
+
 .column-40 {
   flex-basis: 40%;
 }
