--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -197,6 +197,10 @@ h1 {
   cursor: pointer;
 }
 
+.gold {
+  color: #fc0;
+}
+
 .file-input {
   display: none;
 }
@@ -450,6 +454,19 @@ h1 {
 .notification-follow {
   color: var(--darkbrown-color);
   cursor: pointer;
+}
+
+.follow-icon {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 0.5rem;
+}
+
+.follow-text {
+  color: #acacac;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0.2rem;
 }
 
 .no-notifications {
