--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -306,6 +306,16 @@ h1 {
   margin: 0.5rem;
 }
 
+.display-square {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 350px;
+  max-width: 800px;
+  overflow: hidden;
+  margin: 0.5rem;
+}
+
 .column-third {
   flex-basis: calc(100% / 3);
 }
@@ -355,6 +365,15 @@ h1 {
   min-width: 100%;
   vertical-align: bottom;
   transition: all 1s;
+  overflow: hidden;
+}
+
+.egg-images-display {
+  object-fit: contain;
+  object-position: cover;
+  height: auto;
+  max-width: 100vw;
+  vertical-align: bottom;
   overflow: hidden;
 }
 
