--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -306,16 +306,6 @@ h1 {
   margin: 0.5rem;
 }
 
-.display-square {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 350px;
-  max-width: 800px;
-  overflow: hidden;
-  margin: 0.5rem;
-}
-
 .column-third {
   flex-basis: calc(100% / 3);
 }
@@ -365,15 +355,6 @@ h1 {
   min-width: 100%;
   vertical-align: bottom;
   transition: all 1s;
-  overflow: hidden;
-}
-
-.egg-images-display {
-  object-fit: contain;
-  object-position: cover;
-  height: auto;
-  max-width: 100vw;
-  vertical-align: bottom;
   overflow: hidden;
 }
 
@@ -545,4 +526,21 @@ h1 {
 
 .select-create-egg option {
   font-weight: normal;
+}
+
+.display-square {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 350px;
+  max-width: 100vw;
+  overflow: hidden;
+  margin: 0.5rem;
+}
+
+.egg-images-display {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
