--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -539,8 +539,11 @@ h1 {
 }
 
 .egg-images-display {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  object-fit: cover;
+  object-position: center;
+  max-height: 100%;
+  min-width: 100%;
+  vertical-align: bottom;
+  transition: all 1s;
+  overflow: hidden;
 }
