--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -543,6 +543,7 @@ h1 {
   align-items: center;
   min-width: 350px;
   max-width: 100vw;
+  max-height: 60vh;
   overflow: hidden;
   margin: 0.5rem;
 }
