--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -126,6 +126,10 @@ h1 {
   color: red;
 }
 
+.red-background {
+  color: red;
+}
+
 .egg-text {
   color: #c16500;
   font-weight: 700;
@@ -166,7 +170,8 @@ h1 {
 }
 
 .light {
-  font-weight: 300;
+  font-weight: 400;
+  line-height: 2;
 }
 
 .question {
@@ -239,6 +244,15 @@ h1 {
   padding: 0.5rem;
 }
 
+.map-instructions-button {
+  color: var(--light-brown);
+  position: fixed;
+  top: 6rem;
+  right: 0;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+
 .navbar-map i {
   color: #fc0;
   cursor: pointer;
@@ -296,6 +310,10 @@ h1 {
 
 .p1 {
   padding: 0.3rem;
+}
+
+.p2 {
+  padding: 1rem;
 }
 
 .red {
@@ -604,7 +622,7 @@ h1 {
 .delete-egg {
   color: whitesmoke;
   background-color: #f19c79;
-  width: 100%;
+  max-width: 50%;
   min-height: 30px;
   border-radius: 6px;
   border: none;
