--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -206,7 +206,7 @@ h1 {
 
 .navbar-map {
   background-color: white;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   padding: 0.3rem;
